Moved swapchain into its own struct due to complex limitations, fixed resizing window which caused a crash, and created renderer file - Resizing causes semaphore signal errors, this is due to the limitations right now which the renderer.h file will serve to fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(Vulkan REQUIRED)
 add_executable(Cocoa
         src/main.c
         src/game/game.c
+        src/graphics/swapchain.c
 )
 
 target_link_libraries(Cocoa
