Moved rendering code into its own file and created Renderer, created Frame to manage per flight resources, and swapchain resizing now affects the swapchain provided instead of creating a new swapchain. - Device logic is a little bit, it is planned that it'll be moved into its own file soon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(Cocoa
         src/main.c
         src/game/game.c
         src/graphics/swapchain.c
+        src/graphics/renderer.c
 )
 
 target_link_libraries(Cocoa
