Moved device logic into its own file, and adjusted other graphics logic to work with this encapsulation. - Pipeline setup is planned next

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(Cocoa
         src/game/game.c
         src/graphics/swapchain.c
         src/graphics/renderer.c
+        src/graphics/device.c
 )
 
 target_link_libraries(Cocoa
