Created formats.h/.c to help with abstracting vulkan formats (and to make them a little more readable), created pipeline.h/.c to help setup graphics pipelines with ease, and created shader.h/.c to help with creating shader objects with ease. - Pipeline isn't fully setup yet, will finish this next commit - Shader isn't fully setup yet, will finish this next(?) commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ add_executable(Cocoa
         src/graphics/swapchain.c
         src/graphics/renderer.c
         src/graphics/device.c
+        src/graphics/formats.c
+        src/graphics/pipeline.c
+        src/graphics/shader.c
 )
 
 target_link_libraries(Cocoa
