Added pipeline_layout.h/.c to help with creating vulkan pipeline layouts easily, and connected the pipeline layout to the pipeline - Pipeline layouts have no descriptors or push constants for now - Pipeline should be done now, if theres any issues they should be fixed by next commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(Cocoa
         src/graphics/device.c
         src/graphics/formats.c
         src/graphics/pipeline.c
+        src/graphics/pipeline_layout.c
         src/graphics/shader.c
 )
 
