--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 
 find_package(SDL3 CONFIG REQUIRED)
-find_package(Vulkan REQUIRED)
+find_package(Vulkan REQUIRED COMPONENTS glslangValidator)
 
 add_executable(Cocoa
         src/main.c
@@ -19,6 +19,7 @@ add_executable(Cocoa
         src/graphics/pipeline_layout.c
         src/graphics/shader.c
         src/graphics/buffer.c
+        src/graphics/geometry.c
 )
 
 target_link_libraries(Cocoa
@@ -33,6 +34,32 @@ if(APPLE)
         "-framework AppKit"
    )
 endif()
+
+file(GLOB_RECURSE SHADER_FILES
+    "${CMAKE_SOURCE_DIR}/content/*.vert"
+    "${CMAKE_SOURCE_DIR}/content/*.frag"
+    "${CMAKE_SOURCE_DIR}/content/*.comp"
+    "${CMAKE_SOURCE_DIR}/content/*.geom"
+    "${CMAKE_SOURCE_DIR}/content/*.tesc"
+    "${CMAKE_SOURCE_DIR}/content/*.tese"
+)
+
+set(SPV_SHADERS "")
+foreach(SHADER ${SHADER_FILES})
+    get_filename_component(SHADER_NAME ${SHADER} NAME)
+    set(SPV_FILE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/$<CONFIG>/content/${SHADER_NAME}.spv")
+    
+    add_custom_command(
+        OUTPUT ${SPV_FILE}
+        COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/$<CONFIG>/content"
+        COMMAND ${Vulkan_GLSLANG_VALIDATOR_EXECUTABLE} -V ${SHADER} -o ${SPV_FILE}
+        DEPENDS ${SHADER}
+        COMMENT "Compiling shader ${SHADER_NAME}"
+    )
+    
+    list(APPEND SPV_SHADERS ${SPV_FILE})
+endforeach()
+add_custom_target(compile_shaders ALL DEPENDS ${SPV_SHADERS})
 
 add_custom_target(copy_content_to_binary ALL
         COMMAND ${CMAKE_COMMAND} -E copy_directory
